--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-codemirror": "^6.1.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^5.0.0",
